# comext-harmonisation

./: .gitignore  LICENSE  MANIFEST.in  PAPER_CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  analysis_fig3_stability.yaml  analysis_share_stability.yaml  analysis_share_stability_filtered.yaml  analysis_stress_test.yaml  pipeline_estimate_chain_all_years.yaml  pipeline_estimate_chain_all_years_backward.yaml  pipeline_example.yaml  pipeline_run_2000_2010_cn2007.yaml
configs/analysis/: bilateral_persistence_cn2007_raw.yaml  chain_length.yaml  chained_link_distribution.yaml  crm_revision_exposure_2023.yaml  link_distribution_adjacent.yaml  link_distribution_adjacent_observed_universe.yaml  revision_validation.yaml  sampling_robustness_cn2007.yaml  share_stability_deterministic_placebo.yaml  stress_test.yaml  synthetic_persistence.yaml  synthetic_persistence_thesis_examples.yaml
configs/pipeline/: estimate_chain_all_years_backward.yaml  estimate_chain_all_years_forward.yaml  example.yaml  run_2000_2010_cn2007.yaml
data/metadata/: PROCESSED.txt
scripts/: apply_weights.py  build_chained_weights.py  plot_chain_length_from_summary.py  run_analysis.py  run_chained_apply.py  run_chained_apply_monthly.py  run_estimation.py  run_fig3_analysis.py  run_pipeline.py
tests/: test_application.py  test_concordance.py  test_estimation_matrices.py  test_estimation_runner.py  test_estimation_shares.py  test_estimation_solver.py  test_groups.py  test_mappings.py  test_pipeline_config.py  test_public_api.py  test_run_pipeline.py
(+137 files in other folders)
